--- a/themes/example/layout/index.ejs
+++ b/themes/example/layout/index.ejs
@@ -1,1 +1,15 @@
-<h1>Hello<h1>
+<h1>Low Quality Image Placeholders example</h1>
+
+<% page.posts.each(function (post, i) { %>
+    <article class="post">
+        <h3><%- post.title %></h3>
+
+        <div class="post-content">
+            <div class="cover-image" style="background-image: url(<%- url_for(post.featured_image)%>)"></div>
+            <div class="post-excerpt">
+                <%- post.excerpt %>
+            </div>
+        </div>
+
+    </article>
+<% }) %>
