--- a/themes/example/source/css/style.styl
+++ b/themes/example/source/css/style.styl
@@ -9,8 +9,20 @@
   flex: 1 0 50%
   padding-left: 12px
 
+@keyframes lazy-image-placeholder
+  0%
+  opacity: 0
+  99%
+  opacity: 0
+  100%
+  opacity: 1
+
 .cover-image
+  animation: lazy-image-placeholder 300ms
   flex: 1 0 50%
   background-repeat: no-repeat
   background-size: cover
   background-position: center
+
+.cover-image.is-loaded
+  animation: none
